fix spacing on tables

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -277,6 +277,6 @@ p {
   }
 
   table {
-    border-spacing: 20px
+    border-spacing: 15px 0px;
   }
 }
